--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,29 @@
 buildscript {
 	repositories {
-		gradlePluginPortal()
-		maven { url "https://repo.spring.io/plugins-release" }
+
+//		gradlePluginPortal()
+//		maven { url'http://maven.aliyun.com/nexus/content/groups/public' }
+//		maven { url "https://repo.spring.io/plugins-release" }
+
+//		maven { url 'https://plugins.gradle.org/m2/' }
+//		maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+//		maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//		maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+//		maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+
+		maven { url 'https://repo1.maven.org/maven2/' }
+		maven { url 'https://maven.aliyun.com/repository/public' }
+		maven { url 'https://maven.aliyun.com/repository/google' }
+		maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+		maven { url 'https://maven.aliyun.com/repository/spring' }
+		maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
+
+		maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
+		maven { url 'https://maven.aliyun.com/repository/grails-core' }
+
+		mavenLocal()
+		mavenCentral()
+
 	}
 	dependencies {
 		classpath("io.spring.gradle:propdeps-plugin:0.0.9.RELEASE")
